<resources>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="usernamehint">Username</string>
    <string name="hintpassword">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="sharedoc">SHARED DOC</string>
    <string name="docview">DOC VIEW</string>
    <string name="events">EVENTS</string>
    <string name="messages">MESSAGES</string>
    <string name="ispum"> nunc,</string>
    <!--<string name="ispum">sadf</string>-->
    <string name="Easysharename">Easy Share</string>
    <string name="document_management_system">Document Management System</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event description</string>
    <string name="sharedoc_title">ShareDoc Title</string>
    <string name="sharedoc_description">ShareDoc description</string>
    <string name="docno">DocNo </string>
    <string name="docnostring">.....</string>
    <string name="_00000">00000</string>
    <string name="uploaded_on">Uploaded On</string>
    <string name="message_subject">Message Subject</string>
    <string name="message">Message</string>
    <string name="no_messages_found">No messages found.</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "pp"
    </string>
    <string name="uploaded_doc">Uploaded DOC</string>
    <string name="no_shared_docs_found">No shared docs found.</string>
    <string name="no_docs_found">No docs found.</string>
    <string name="enter_secret_pin">Enter Secret Pin</string>
    <string name="confirm_secret_pin">Confirm Secret Pin</string>
    <string name="please_remember_secret_pin_you_must_use_secret_key_to_open_easyshare_everytime">Please create secret pin.You must use secret key to open ezypay everytime</string>
    <string name="secretkeytext">You must use this secret pin  to open eZypay everytime</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="settings">SETTINGS</string>
    <string name="change_pin">CHANGE PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="sync">SYNC</string>
    <string name="update_period">Update Period  </string>
    <string name="update_interval">Update Interval</string>
    <string name="h">Hour</string>
    <string name="m">Minute</string>
    <string name="share_doc">Shared DOC</string>
    <string name="events_home">Events</string>
    <string name="messages_home">Messages</string>
    <string name="uploaded_doc_drawer">UPLOADED DOC</string>
    <string name="product_name_easyshare">Product Name : EasyShare</string>
    <string name="about">ABOUT</string>
    <string name="technology_partner">TECHNOLOGY PARTNER</string>
    <string name="name">Name</string>
    <string name="enter_pinE">PIN</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="recive">RECEIVE CASH</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="changepin">CHANGE PIN</string>
    <string name="settingsx">SETTINGS</string>
    <string name="aboutx">ABOUT</string>
    <string name="textviewreceive">Merchant can receive money from customer</string>
    <string name="profile">PROFILE</string>
    <string name="bill_no">Reference No</string>
    <string name="transaction_list">TRANSACTION LIST</string>
     <string name="receive_cash">RECEIVE CASH</string>
    <string name="help">HELP</string>
    <string name="generate">GENERATE</string>

    <string name="please_wait_for_otp_message">We will message OTP code to customer phone.</string>
    <string name="ezypay_id">Ezypay id</string>
    <string name="mobile">Mobile</string>
    <string name="generate_ezypay_id">Generate ezypay id by entering customer number.Customer will receive a sms with ezypay id</string>
</resources>
