<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_new"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_recive"
            android:icon="@drawable/cash_new"
            android:title="@string/recive" />

        <item
            android:id="@+id/nav_transaction_list"
            android:icon="@drawable/trans_new"
            android:title="@string/transaction_list" />
        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/cash_new"
            android:title="@string/generate" />

        <item
            android:id="@+id/nav_change_pin"
            android:icon="@drawable/change_pin_new"
            android:title="@string/change_pin" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_new"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_new"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_new"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/quit_new"
            android:title="QUIT" />

    </group>


</menu>
